--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@ var Module = {
 	} ]
 };
 </script>
-<!-- <script type="text/javascript" src="freetype.js"></script> -->
+<script type="text/javascript" src="freetype.js"></script>
 <script type="text/javascript" src="bwip.js"></script>
 <script type="text/javascript" src="lib/canvas.js"></script>
 <script type="text/javascript" src="lib/symdesc.js"></script>
@@ -230,11 +230,7 @@ function saveCanvas(type, ext) {
 				  }, type, 1);
 }
 </script>
-
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
- --><!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- --></head>
-<body>
+</head><body>
 <br>
 <div id="params">
 <table border=0 cellpading=0 cellspacing=0><tr>
@@ -247,7 +243,7 @@ function saveCanvas(type, ext) {
 			
 			</select>
 	<tr><th>Bar Text:<td><textarea id="symtext" type="text" style="width:73ex; height: 5em"></textarea>
-	
+	<tr><th>Alt Text:<td><input id="symaltx" type="text" style="width:63ex">
 	<tr><th>Options:<td><input id="symopts" type="text" style="width:63ex">
 	<tr><td><td>
 		<a class="saveas" href="javascript:saveCanvas('image/png','.png')">Save As PNG</a>
