--- a/demo.html
+++ b/demo.html
@@ -241,10 +241,14 @@ function saveCanvas(type, ext) {
 				  }, type, 1);
 }
 </script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
 </head><body>
+<div ng-app="">
 <br>
 <hideBarcode>
-<div id="params">
+<div id="params" >
 <table border=0 cellpading=0 cellspacing=0><tr>
 <td>
 	<table border=0 cellpading=0 cellspacing=0>
@@ -254,7 +258,8 @@ function saveCanvas(type, ext) {
 			<option value="qrcode">QR Code</option>
 			
 			</select>
-	<tr><th>Bar Text:<td><textarea id="symtext" type="text" style="width:73ex; height: 5em"></textarea>
+	<tr><th>Bar Text:<td><textarea id="symtext" type="text" style="width:73ex; height: 5em">M1SMITH/JOHN          E111111 STLMEXTN 8292 094C003A0005 155>318  O     TN              2900621793042390    TN 0253826275</textarea>
+
 	<tr><th>Alt Text:<td><input id="symaltx" type="text" style="width:63ex">
 	<tr><th>Options:<td><input id="symopts" type="text" style="width:63ex">
 	<tr><td><td>
@@ -284,7 +289,8 @@ function saveCanvas(type, ext) {
 <tr><td><br>
 </table>
 </div>
-
+M1SMITH/JOHN          E111111 STLMEXTN {{gallery.flightNumber}} 094C003A0005 155>318  O     TN              2900621793042390    TN 0253826275
+<p>Name : <input type="text" ng-model="gallery.flightNumber"></p>
 </hideBarcode>
 <showBarcode>
 <div id="content">
@@ -295,6 +301,8 @@ function saveCanvas(type, ext) {
 
 <button id="backButton">Back</button>
 </showBarcode>
+<!-- </div> -->
 </div>
 </body>
+
 </html>
